# BitGrid

./: .gitignore  AGENTS.md  AppConst.hpp  AppUtil.cpp  AppUtil.hpp  BitGrid.rc  CMakeLists.txt  DrawGrid.cpp  DrawGrid.hpp  InjectHelper.hpp  MnnOcr.hpp  PathUtil.cpp  PathUtil.hpp  README.md  ScreenCapture.cpp  ScreenCapture.hpp  ScreenSelectOverlay.cpp  ScreenSelectOverlay.hpp  build.bat  main.cpp  main.htm  makesln.bat  resource.h
MNN/: CMakeLists.txt
MNN/source/core/: MNNFileUtils.cpp
inject/: CMakeLists.txt  inject.cpp  inject.hpp
snake/: CMakeLists.txt  window.cpp  window.hpp
